src/cli/renderer/snapshots/thndrs_lib__cli__renderer__region__tests__diff_output.snap
---
source: src/cli/renderer/region/tests.rs
assertion_line: 31
expression: contents
---
│                                                                                   # [bg=#171928]=                                                                                
│   ✓ replace_range [ok]  path: src/main.rs                                         # [bg=#171928]=   [fg=#37f499 bg=#171928]=✓  [fg=#ebfafa bg=#171928 b]=replace_range [fg=#37f499 bg=#171928]= [ok] [bg=#171928]=   [fg=#abb4da bg=#171928]=path: src/main.rs [bg=#171928]=                                      [bg=#171928]=  
│      edit  replace_range src/main.rs [ok]                                         # [bg=#171928]=   [fg=#3b4261 bg=#171928 b]=   edit   [fg=#abb4da bg=#171928]=replace_range src/main.rs [ok] [bg=#171928]=                                      [bg=#171928]=  
│      diff  src/main.rs +1 -1                                                      # [bg=#171928]=   [fg=#3b4261 bg=#171928 b]=   diff   [fg=#abb4da bg=#171928]=src/main.rs +1 -1 [bg=#171928]=                                                   [bg=#171928]=  
│      │ --- src/main.rs                                                            # [bg=#171928]=   [fg=#3b4261 bg=#171928]=   │  [fg=#c0c5ce bg=#171928]=- [fg=#c0c5ce bg=#171928]=- [fg=#c0c5ce bg=#171928]=- [fg=#c0c5ce bg=#171928]= src [fg=#c0c5ce bg=#171928]=/ [fg=#c0c5ce bg=#171928]=main.rs [bg=#171928]=                                                         [bg=#171928]=  
│      │ +++ src/main.rs                                                            # [bg=#171928]=   [fg=#3b4261 bg=#171928]=   │  [fg=#c0c5ce bg=#171928]=+ [fg=#c0c5ce bg=#171928]=+ [fg=#c0c5ce bg=#171928]=+ [fg=#c0c5ce bg=#171928]= src [fg=#c0c5ce bg=#171928]=/ [fg=#c0c5ce bg=#171928]=main.rs [bg=#171928]=                                                         [bg=#171928]=  
│      │ @@ -1,3 +1,3 @@                                                            # [bg=#171928]=   [fg=#3b4261 bg=#171928]=   │  [fg=#c0c5ce bg=#171928]=@ [fg=#c0c5ce bg=#171928]=@ [fg=#c0c5ce bg=#171928]=  [fg=#c0c5ce bg=#171928]=- [fg=#d08770 bg=#171928]=1 [fg=#c0c5ce bg=#171928]=, [fg=#d08770 bg=#171928]=3 [fg=#c0c5ce bg=#171928]=  [fg=#c0c5ce bg=#171928]=+ [fg=#d08770 bg=#171928]=1 [fg=#c0c5ce bg=#171928]=, [fg=#d08770 bg=#171928]=3 [fg=#c0c5ce bg=#171928]=  [fg=#c0c5ce bg=#171928]=@ [fg=#c0c5ce bg=#171928]=@ [bg=#171928]=                                                         [bg=#171928]=  
│      │  fn main() {                                                               # [bg=#171928]=   [fg=#3b4261 bg=#171928]=   │  [fg=#c0c5ce bg=#171928]=  [fg=#b48ead bg=#171928]=fn [fg=#c0c5ce bg=#171928]=  [fg=#8fa1b3 bg=#171928]=main [fg=#c0c5ce bg=#171928]=( [fg=#c0c5ce bg=#171928]=) [fg=#c0c5ce bg=#171928]=  [fg=#c0c5ce bg=#171928]={ [bg=#171928]=                                                            [bg=#171928]=  
│      │ -    println!("old");                                                      # [bg=#171928]=   [fg=#3b4261 bg=#171928]=   │  [fg=#c0c5ce bg=#171928]=- [fg=#c0c5ce bg=#171928]=     [fg=#c0c5ce bg=#171928]=println! [fg=#c0c5ce bg=#171928]=( [fg=#c0c5ce bg=#171928]=" [fg=#a3be8c bg=#171928]=old [fg=#c0c5ce bg=#171928]=" [fg=#c0c5ce bg=#171928]=) [fg=#c0c5ce bg=#171928]=; [bg=#171928]=                                                   [bg=#171928]=  
│      │ +    println!("new");                                                      # [bg=#171928]=   [fg=#3b4261 bg=#171928]=   │  [fg=#c0c5ce bg=#171928]=+ [fg=#c0c5ce bg=#171928]=     [fg=#c0c5ce bg=#171928]=println! [fg=#c0c5ce bg=#171928]=( [fg=#c0c5ce bg=#171928]=" [fg=#a3be8c bg=#171928]=new [fg=#c0c5ce bg=#171928]=" [fg=#c0c5ce bg=#171928]=) [fg=#c0c5ce bg=#171928]=; [bg=#171928]=                                                   [bg=#171928]=  
│      │ … (7 lines stored, 6 shown here)                                           # [bg=#171928]=   [fg=#abb4da bg=#171928]=   │ … (7 lines stored, 6 shown here) [bg=#171928]=                                        [bg=#171928]=
