src/cli/renderer/snapshots/thndrs_lib__cli__renderer__region__tests__error_message.snap
---
source: src/cli/renderer/region/tests.rs
assertion_line: 31
expression: contents
---
│                                                                                   # [bg=#171928]=                                                                                
│   ⚠ Error                                                                         # [bg=#171928]=   [fg=#f16c75 bg=#171928 b]=⚠ Error [bg=#171928]=                                                                      [bg=#171928]=  
│   Provider request failed: connection refused                                     # [bg=#171928]=   [fg=#ebfafa bg=#171928]=Provider request failed: connection refused [bg=#171928]=                                  [bg=#171928]=
