src/cli/renderer/snapshots/thndrs_lib__cli__renderer__region__tests__short_error_prompt_spacing.snap
---
source: src/cli/renderer/region/tests.rs
assertion_line: 31
expression: contents
---
│                                                                                   # [bg=#171928]=                                                                                
│   ⚠ Error                                                                         # [bg=#171928]=   [fg=#f16c75 bg=#171928 b]=⚠ Error [bg=#171928]=                                                                      [bg=#171928]=  
│   Provider request failed: connection refused                                     # [bg=#171928]=   [fg=#ebfafa bg=#171928]=Provider request failed: connection refused [bg=#171928]=                                  [bg=#171928]=  
│                                                                                   # [bg=#212337]=                                                                                
│    test-session  ✕ failed                                                         # [bg=#212337]=   [bg=#212337]=  [fg=#37f499 bg=#212337 b]=test-session [bg=#212337]=   [fg=#f16c75 bg=#212337]=✕ failed [bg=#212337]=                                                      [bg=#212337]=  
│    ✕                                                                              # [bg=#212337]=   [bg=#212337]=  [fg=#f16c75 bg=#212337]=✕ [bg=#212337]=   [bg=#212337]=                                                                         [bg=#212337]=  
│    model: test-model   search: native   tok: ↑0 ↓0   git: main clean              # [bg=#212337]=   [bg=#212337]=  [fg=#abb4da bg=#212337]=model: test-model [bg=#212337]=    [fg=#abb4da bg=#212337]=search: native [bg=#212337]=    [fg=#e0e0e0 bg=#212337]=tok: ↑0 ↓0 [bg=#212337]=    [fg=#37f499 bg=#212337]=git: main clean [bg=#212337]=           [bg=#212337]=  
│                                                                                   # [bg=#212337]=
